--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "http_server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npm install",
+    "start": "node http_server.js",
   },
   "repository": {
     "type": "git",
@@ -21,7 +23,7 @@
     "express": "^4.17.1",
     "faker": "^5.1.0",
     "lowdb": "^1.0.0"
-  }
+  },
   "engines": {
 
     "node": "14.x"
