--- a/package.json
+++ b/package.json
@@ -5,22 +5,26 @@
   "main": "http_server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npm install",
+    "start": "node http_server.js",
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/kogsio/littletiers.git"
   },
-  "author": "JakeHolliman",
+  "author": "jakegholliman@yahoo.com",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/Jake-Holliman/heroku-first"
+    "url": "https://github.com/kogsio/littletiers/issues"
   },
-  "homepage": "https://github.com/Jake-Holliman/heroku-first",
+  "homepage": "https://github.com/kogsio/littletiers#readme",
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "faker": "^5.1.0",
     "lowdb": "^1.0.0"
+  }
+  "engines": {
+    "node": "14.x"
   },
- 
 }
